nginx_port_8090_deployment.yml
apiVersion: v1
kind: ConfigMap
metadata:
  name: default-conf
data:
  default.conf: |
    [...]
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.16.1
        ports:
        - containerPort: 8090
        volumeMounts:
        - mountPath: /etc/nginx/conf.d
          readOnly: true
          name: default-conf
        - name: workdir
          mountPath: /usr/share/nginx/html
      dnsPolicy: Default
      volumes:
      - name: workdir
        emptyDir: {}
      - name: default-conf
        configMap:
          name: default-conf
          items:
            - key: default.conf
              path: default.conf
