single_nginx_port_8090_pod.yml
apiVersion: v1
kind: ConfigMap
metadata:
  name: default-conf
data:
  default.conf: |
    [...]
kind: Pod
metadata:
  name: init-demo
spec:
  containers:
  - name: nginx
    image: nginx:1.16.1
    ports:
    - containerPort: 8090
    volumeMounts:
    - mountPath: /etc/nginx/conf.d
      readOnly: true
      name: default-conf
    - name: workdir
      mountPath: /usr/share/nginx/html
  # These containers are run during pod initialization
  dnsPolicy: Default
  volumes:
  - name: workdir
    emptyDir: {}
  - name: default-conf
    configMap:
      name: default-conf
      items:
        - key: default.conf
          path: default.conf
